[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/crosshair030.png" type="Texture" id=1]
[ext_resource path="res://src/UserInterface/Crosshair.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TopL/TopLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TopR/TopRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BottomL/BottomLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 32 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BottomR/BottomRight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24, 32 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "animate"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TopL/TopLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ), Vector2( 0, -8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TopR/TopRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 24, 0 ), Vector2( 32, -8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BottomL/BottomLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 32 ), Vector2( 0, 40 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BottomR/BottomRight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 24, 32 ), Vector2( 32, 40 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hide"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_hide_animation_finished"
} ]
}

[sub_resource type="RectangleShape2D" id=4]

[node name="Crosshair" type="Node2D"]
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 2 )

[node name="TopL" type="Node2D" parent="."]
scale = Vector2( 1, 1 )

[node name="TopLeft" type="Sprite" parent="TopL"]
position = Vector2( 8, 0 )
scale = Vector2( 1, 1 )
texture = ExtResource( 1 )
hframes = 2
vframes = 2

[node name="TopR" type="Node2D" parent="."]
scale = Vector2( 1, 1 )

[node name="TopRight" type="Sprite" parent="TopR"]
position = Vector2( 24, 0 )
scale = Vector2( 1, 1 )
texture = ExtResource( 1 )
hframes = 2
vframes = 2
frame = 1

[node name="BottomL" type="Node2D" parent="."]
scale = Vector2( 1, 1 )

[node name="BottomLeft" type="Sprite" parent="BottomL"]
position = Vector2( 8, 32 )
scale = Vector2( 1, 1 )
texture = ExtResource( 1 )
hframes = 2
vframes = 2
frame = 2

[node name="BottomR" type="Node2D" parent="."]
scale = Vector2( 1, 1 )

[node name="BottomRight" type="Sprite" parent="BottomR"]
position = Vector2( 24, 32 )
scale = Vector2( 1, 1 )
texture = ExtResource( 1 )
hframes = 2
vframes = 2
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/animate = SubResource( 1 )
anims/hide = SubResource( 3 )

[node name="Interaction" type="Area2D" parent="." groups=["Crosshair"]]
position = Vector2( 15, 15 )
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction"]
scale = Vector2( 1, 1 )
shape = SubResource( 4 )

[connection signal="area_entered" from="Interaction" to="." method="_on_Interaction_area_entered"]
